Added helper method for DecodedLog